[gd_scene load_steps=47 format=3 uid="uid://b27yf8njytanc"]

[ext_resource type="PackedScene" uid="uid://dxhdlkrhl7qcc" path="res://scenes/base_level.tscn" id="1_a1s28"]
[ext_resource type="Script" uid="uid://cqvqu6ynyol3l" path="res://scripts/first_level.gd" id="2_h5xk8"]
[ext_resource type="PackedScene" uid="uid://bhnedki8hvn28" path="res://scenes/small_door_fragile.tscn" id="3_o3eh1"]
[ext_resource type="Texture2D" uid="uid://rfe4y8xlstrw" path="res://assets/textures/dev/grids/Dark/texture_07.png" id="4_l8dtx"]
[ext_resource type="Script" uid="uid://boiyxwxmv1xb" path="res://scripts/button.gd" id="5_w4jnu"]
[ext_resource type="Script" uid="uid://8po5n2w18wfj" path="res://scripts/door.gd" id="6_6ebwg"]
[ext_resource type="Texture2D" uid="uid://b03m8y0h30bki" path="res://assets/textures/dev/grids/Orange/texture_05.png" id="7_2pbxn"]
[ext_resource type="PackedScene" uid="uid://uitpo6e5gdfc" path="res://scenes/small_door_down.tscn" id="8_h0lyo"]
[ext_resource type="Script" uid="uid://3k8naf5hfewc" path="res://scripts/small_basic_door_1.gd" id="9_febli"]
[ext_resource type="PackedScene" uid="uid://b17less8rxycp" path="res://scenes/button_panel_1.tscn" id="10_2gjbm"]
[ext_resource type="PackedScene" uid="uid://dmehs2dx8t8x6" path="res://scenes/detector_platform_vertical.tscn" id="11_bt3mv"]
[ext_resource type="PackedScene" uid="uid://cqn4tv8qw3nmu" path="res://scenes/small_button_door_down.tscn" id="12_vav15"]
[ext_resource type="PackedScene" uid="uid://bgb8wc6005gme" path="res://scenes/triggered_platform_vertical.tscn" id="13_vp7v6"]
[ext_resource type="PackedScene" uid="uid://cw0h7v4byurs4" path="res://scenes/detector_platform_horizontal.tscn" id="14_5fx6l"]
[ext_resource type="PackedScene" uid="uid://bl7d14kv137kt" path="res://scenes/enemy.tscn" id="15_eco54"]
[ext_resource type="PackedScene" uid="uid://d1wejnsxpvgvl" path="res://scenes/gun_pickup.tscn" id="16_hlk7s"]

[sub_resource type="BoxShape3D" id="BoxShape3D_snglc"]
size = Vector3(1, 2, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_385i6"]
albedo_texture = ExtResource("4_l8dtx")
uv1_triplanar = true

[sub_resource type="BoxMesh" id="BoxMesh_qndhv"]
material = SubResource("StandardMaterial3D_385i6")
size = Vector3(1, 2, 1)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_7pb34"]
height = 0.25
radius = 0.2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_snglc"]
albedo_color = Color(0.721569, 0, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_385i6"]
material = SubResource("StandardMaterial3D_snglc")
top_radius = 0.2
bottom_radius = 0.2
height = 0.25

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vtkm1"]
albedo_color = Color(0.408329, 0.408329, 0.408329, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_ab8ao"]
material = SubResource("StandardMaterial3D_vtkm1")
top_radius = 0.3
bottom_radius = 0.3
height = 0.1

[sub_resource type="BoxShape3D" id="BoxShape3D_m5da8"]
size = Vector3(0.5, 3, 3)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3641t"]
albedo_texture = ExtResource("4_l8dtx")
uv1_triplanar = true

[sub_resource type="BoxMesh" id="BoxMesh_b30th"]
material = SubResource("StandardMaterial3D_3641t")
size = Vector3(0.5, 3, 3)

[sub_resource type="BoxShape3D" id="BoxShape3D_qedf2"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kalee"]
albedo_texture = ExtResource("7_2pbxn")
uv1_triplanar = true

[sub_resource type="BoxMesh" id="BoxMesh_vtkm1"]
material = SubResource("StandardMaterial3D_kalee")

[sub_resource type="BoxShape3D" id="BoxShape3D_l5n3x"]
size = Vector3(1, 5, 10)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6ao12"]
albedo_texture = ExtResource("7_2pbxn")
uv1_triplanar = true
uv1_world_triplanar = true

[sub_resource type="BoxMesh" id="BoxMesh_iiyeb"]
material = SubResource("StandardMaterial3D_6ao12")
size = Vector3(1, 5, 10)

[sub_resource type="NavigationMesh" id="NavigationMesh_38i4m"]
vertices = PackedVector3Array(-0.75, 0.5, -7.25, 0.25, 0.5, -7.5, 0.25, 0.5, -24.5, -24.5, 0.5, -24.5, -24.5, 0.5, -6, -0.75, 0.5, -6.25, 6.5, 0.5, 4.75, 6.75, 0.5, 5.25, 8.5, 0.5, 5.25, 1, 0.5, -6, 0.25, 0.5, -5.75, 0.25, 0.5, -4, 1, 0.5, -3.75, 1, 0.5, -7.25, 4.75, 0.5, -0.5, 4.75, 0.5, 2.5, 4.25, 0.5, 2.75, 5, 0.5, 5, 24.5, 0.5, 7, 24.5, 0.5, -24.5, 0.75, 0.5, -2.5, 1.75, 0.5, -0.75, 8.75, 0.5, 7, -0.5, 0.5, -5.75, 0.75, 0.5, 6.75, 0.75, 0.5, 8, 2.25, 0.5, 8, 2.25, 0.5, 6.5, -12.75, 0.5, 6.5, -11.75, 0.75, 6.5, -10, 0.75, 6.25, -0.75, 0.5, -3.75, 1.25, 0.5, -0.5, -0.75, 0.5, -2.75, 3.25, 3.5, 12.25, 1.25, 3.5, 12.5, 1.25, 3.5, 13.5, 4.75, 3.5, 13.75, 3.25, 0.75, 6.5, 4.83333, 3, 10.8333, 4.95833, 0.75, 6.45833, -0.5, 0.5, 6.5, 1.25, 0.5, 2.5, -9, 0.5, 6.5, -9, 0.5, 8.25, -0.75, 0.5, 8.25, -11.75, 3.5, 13.75, -10.25, 3.5, 13.75, -11.75, 3, 10.85, -10.1667, 3.25, 11.25, -24.5, 0.5, 7.75, -12.75, 0.5, 8, 2.25, 1.25, 0.25, 2.25, 1.25, 1.75, 3.75, 1.25, 1.75, 3.75, 1.25, 0.25, 6.25, 1.25, 6.5, 6.25, 1.25, 7.75, 7.75, 1.25, 7.75, 7.75, 1.25, 6.25, 8.5, 0.5, 8.75, 6, 0.5, 8.75, 6, 0.5, 14.5, 5.5, 0.5, 15, 4, 0.5, 15, 4, 0.5, 24.5, 24.5, 0.5, 24.5, -24.5, 0.5, 13.5, -12.75, 0.5, 13.25, 0.5, 0.5, 9.75, 2.25, 0.5, 14.75, -0.75, 0.5, 9.5, -9, 0.5, 14.5, -9.5, 0.5, 15, -11, 0.5, 15, -11, 0.5, 24.5, -11.5, 0.5, 9.75, -11.5, 0.5, 11.25, -10.25, 0.5, 11.25, -10.25, 0.5, 9.75, 3.5, 0.5, 9.75, 3.5, 0.5, 11.25, 4.75, 0.5, 11.25, 4.75, 0.5, 9.75, -12.75, 0.5, 14.75, -24.5, 0.5, 24.5)
polygons = [PackedInt32Array(1, 0, 2), PackedInt32Array(2, 0, 3), PackedInt32Array(3, 0, 4), PackedInt32Array(0, 5, 4), PackedInt32Array(8, 7, 6), PackedInt32Array(10, 9, 11), PackedInt32Array(11, 9, 12), PackedInt32Array(14, 9, 13), PackedInt32Array(16, 15, 17), PackedInt32Array(17, 15, 6), PackedInt32Array(14, 13, 8), PackedInt32Array(8, 13, 18), PackedInt32Array(18, 13, 2), PackedInt32Array(18, 2, 19), PackedInt32Array(12, 21, 20), PackedInt32Array(6, 15, 8), PackedInt32Array(8, 15, 14), PackedInt32Array(12, 9, 21), PackedInt32Array(21, 9, 14), PackedInt32Array(13, 1, 2), PackedInt32Array(18, 22, 8), PackedInt32Array(23, 10, 11), PackedInt32Array(25, 24, 26), PackedInt32Array(26, 24, 27), PackedInt32Array(29, 28, 30), PackedInt32Array(30, 28, 31), PackedInt32Array(31, 28, 5), PackedInt32Array(5, 28, 4), PackedInt32Array(23, 11, 5), PackedInt32Array(5, 11, 31), PackedInt32Array(21, 32, 20), PackedInt32Array(20, 32, 33), PackedInt32Array(35, 34, 36), PackedInt32Array(36, 34, 37), PackedInt32Array(17, 38, 27), PackedInt32Array(17, 40, 38), PackedInt32Array(38, 40, 39), PackedInt32Array(38, 39, 34), PackedInt32Array(34, 39, 37), PackedInt32Array(24, 41, 27), PackedInt32Array(27, 41, 42), PackedInt32Array(27, 42, 16), PackedInt32Array(27, 16, 17), PackedInt32Array(31, 33, 30), PackedInt32Array(44, 43, 45), PackedInt32Array(45, 43, 41), PackedInt32Array(32, 42, 33), PackedInt32Array(33, 42, 41), PackedInt32Array(33, 41, 43), PackedInt32Array(33, 43, 30), PackedInt32Array(47, 46, 49), PackedInt32Array(49, 46, 48), PackedInt32Array(49, 48, 29), PackedInt32Array(49, 29, 30), PackedInt32Array(51, 50, 28), PackedInt32Array(28, 50, 4), PackedInt32Array(55, 54, 52), PackedInt32Array(52, 54, 53), PackedInt32Array(57, 56, 58), PackedInt32Array(58, 56, 59), PackedInt32Array(62, 61, 60), PackedInt32Array(65, 64, 63), PackedInt32Array(65, 63, 62), PackedInt32Array(60, 22, 18), PackedInt32Array(62, 60, 65), PackedInt32Array(65, 60, 66), PackedInt32Array(66, 60, 18), PackedInt32Array(68, 67, 51), PackedInt32Array(51, 67, 50), PackedInt32Array(25, 26, 69), PackedInt32Array(69, 26, 70), PackedInt32Array(70, 64, 65), PackedInt32Array(71, 69, 70), PackedInt32Array(45, 71, 44), PackedInt32Array(44, 71, 72), PackedInt32Array(75, 74, 73), PackedInt32Array(73, 72, 75), PackedInt32Array(75, 72, 71), PackedInt32Array(75, 71, 70), PackedInt32Array(75, 70, 65), PackedInt32Array(79, 78, 76), PackedInt32Array(76, 78, 77), PackedInt32Array(83, 82, 80), PackedInt32Array(80, 82, 81), PackedInt32Array(74, 75, 84), PackedInt32Array(84, 75, 85), PackedInt32Array(84, 85, 67), PackedInt32Array(67, 68, 84)]

[sub_resource type="PlaneMesh" id="PlaneMesh_38i4m"]
size = Vector2(50, 50)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qndhv"]
albedo_texture = ExtResource("4_l8dtx")
uv1_triplanar = true

[sub_resource type="BoxMesh" id="BoxMesh_qedf2"]
material = SubResource("StandardMaterial3D_qndhv")
size = Vector3(0.5, 3.335, 0.355)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ab8ao"]
albedo_texture = ExtResource("4_l8dtx")
uv1_triplanar = true

[sub_resource type="BoxMesh" id="BoxMesh_m5da8"]
material = SubResource("StandardMaterial3D_ab8ao")
size = Vector3(0.5, 0.335, 3)

[sub_resource type="BoxShape3D" id="BoxShape3D_b30th"]
size = Vector3(2.5, 2.5, 2.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_38i4m"]
albedo_texture = ExtResource("4_l8dtx")
uv1_triplanar = true

[sub_resource type="PrismMesh" id="PrismMesh_rfcne"]
material = SubResource("StandardMaterial3D_38i4m")
left_to_right = 1.0
size = Vector3(10, 5, 2.5)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_b30th"]
data = PackedVector3Array(5, 2.5, 1.25, 5, -2.5, 1.25, -5, -2.5, 1.25, 5, 2.5, -1.25, -5, -2.5, -1.25, 5, -2.5, -1.25, 5, 2.5, 1.25, 5, 2.5, -1.25, 5, -2.5, 1.25, 5, 2.5, -1.25, 5, -2.5, -1.25, 5, -2.5, 1.25, 5, 2.5, -1.25, 5, 2.5, 1.25, -5, -2.5, -1.25, 5, 2.5, 1.25, -5, -2.5, 1.25, -5, -2.5, -1.25, -5, -2.5, 1.25, 5, -2.5, 1.25, -5, -2.5, -1.25, 5, -2.5, 1.25, 5, -2.5, -1.25, -5, -2.5, -1.25)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jd5vw"]
albedo_texture = ExtResource("4_l8dtx")
uv1_triplanar = true

[sub_resource type="BoxMesh" id="BoxMesh_6ao12"]
material = SubResource("StandardMaterial3D_jd5vw")
size = Vector3(2.5, 2.5, 2.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_jd5vw"]

[node name="world" instance=ExtResource("1_a1s28")]
script = ExtResource("2_h5xk8")
level_name = "test_plane"

[node name="player" parent="." index="0"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 10.2162, 0.682415, 0.989818)

[node name="small_door_down" parent="." index="3" instance=ExtResource("3_o3eh1")]
transform = Transform3D(-5.96046e-08, 0, 1, 0, 1, 0, -1, 0, -5.96046e-08, 0, 0.5, 4)

[node name="interactables" type="Node3D" parent="." index="5"]

[node name="button_panel" type="Node3D" parent="interactables" index="0"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, -2.64316)

[node name="button_wall" type="StaticBody3D" parent="interactables/button_panel" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.50078, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="interactables/button_panel/button_wall" index="0"]
shape = SubResource("BoxShape3D_snglc")

[node name="MeshInstance3D" type="MeshInstance3D" parent="interactables/button_panel/button_wall" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00122881, -0.00124049, -0.00486994)
mesh = SubResource("BoxMesh_qndhv")

[node name="button" type="StaticBody3D" parent="interactables/button_panel" index="1" groups=["button"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.999, 0.565793)
script = ExtResource("5_w4jnu")

[node name="CollisionShape3D" type="CollisionShape3D" parent="interactables/button_panel/button" index="0"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
shape = SubResource("CylinderShape3D_7pb34")

[node name="MeshInstance3D" type="MeshInstance3D" parent="interactables/button_panel/button" index="1"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
mesh = SubResource("CylinderMesh_385i6")
skeleton = NodePath("")

[node name="pressed_timer" type="Timer" parent="interactables/button_panel/button" index="2"]
wait_time = 0.25

[node name="button_outline" type="StaticBody3D" parent="interactables/button_panel" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0.905062)

[node name="MeshInstance3D" type="MeshInstance3D" parent="interactables/button_panel/button_outline" index="0"]
transform = Transform3D(1, -4.37114e-08, 4.37114e-08, 4.37114e-08, -4.37114e-08, -1, 4.37114e-08, 1, -4.37114e-08, 0, 0, -0.371381)
mesh = SubResource("CylinderMesh_ab8ao")

[node name="door" type="AnimatableBody3D" parent="interactables" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -5)
script = ExtResource("6_6ebwg")

[node name="CollisionShape3D" type="CollisionShape3D" parent="interactables/door" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("BoxShape3D_m5da8")

[node name="MeshInstance3D" type="MeshInstance3D" parent="interactables/door" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("BoxMesh_b30th")

[node name="non_grab_cube" type="RigidBody3D" parent="interactables" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.5462, 1, -2.95137)

[node name="CollisionShape3D" type="CollisionShape3D" parent="interactables/non_grab_cube" index="0"]
shape = SubResource("BoxShape3D_qedf2")

[node name="MeshInstance3D" type="MeshInstance3D" parent="interactables/non_grab_cube" index="1"]
mesh = SubResource("BoxMesh_vtkm1")

[node name="light_cube" type="RigidBody3D" parent="interactables" index="3" groups=["grabbable"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.5462, 1, -6.82489)

[node name="CollisionShape3D" type="CollisionShape3D" parent="interactables/light_cube" index="0"]
shape = SubResource("BoxShape3D_qedf2")

[node name="MeshInstance3D" type="MeshInstance3D" parent="interactables/light_cube" index="1"]
mesh = SubResource("BoxMesh_vtkm1")

[node name="heavy_cube" type="RigidBody3D" parent="interactables" index="4" groups=["grabbable"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.45146, 1, -10.4536)
mass = 25.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="interactables/heavy_cube" index="0"]
shape = SubResource("BoxShape3D_qedf2")

[node name="MeshInstance3D" type="MeshInstance3D" parent="interactables/heavy_cube" index="1"]
mesh = SubResource("BoxMesh_vtkm1")

[node name="very_heavy_cube" type="RigidBody3D" parent="interactables" index="5" groups=["grabbable"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.45146, 1, -15.376)
mass = 50.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="interactables/very_heavy_cube" index="0"]
shape = SubResource("BoxShape3D_qedf2")

[node name="MeshInstance3D" type="MeshInstance3D" parent="interactables/very_heavy_cube" index="1"]
mesh = SubResource("BoxMesh_vtkm1")

[node name="small_door_down" parent="interactables" index="6" instance=ExtResource("8_h0lyo")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0.5, 0)
script = ExtResource("9_febli")

[node name="button_panel_1" parent="interactables" index="7" instance=ExtResource("10_2gjbm")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0.5, 1.625)

[node name="StaticBody3D" type="StaticBody3D" parent="interactables" index="8" groups=["wallrun"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 16, 3, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="interactables/StaticBody3D" index="0"]
shape = SubResource("BoxShape3D_l5n3x")

[node name="MeshInstance3D" type="MeshInstance3D" parent="interactables/StaticBody3D" index="1"]
mesh = SubResource("BoxMesh_iiyeb")

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="." index="8"]
navigation_mesh = SubResource("NavigationMesh_38i4m")

[node name="MeshInstance3D" type="MeshInstance3D" parent="NavigationRegion3D" index="0"]
mesh = SubResource("PlaneMesh_38i4m")

[node name="static_objects" type="Node3D" parent="NavigationRegion3D" index="1"]

[node name="door_frame" type="Node3D" parent="NavigationRegion3D/static_objects" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -5)

[node name="StaticBody3D" type="StaticBody3D" parent="NavigationRegion3D/static_objects/door_frame" index="0"]

[node name="CollisionPolygon3D" type="CollisionPolygon3D" parent="NavigationRegion3D/static_objects/door_frame/StaticBody3D" index="0"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.00193012, 0.0596972, -0.229755)
depth = 0.5
polygon = PackedVector2Array(2.085, -0.55, 1.73, -0.55, 1.73, 2.44, -1.27, 2.44, -1.27, -0.55, -1.625, -0.55, -1.625, 2.795, 2.085, 2.795)

[node name="MeshInstance3D" type="MeshInstance3D" parent="NavigationRegion3D/static_objects/door_frame/StaticBody3D" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.169, 1.67779)
mesh = SubResource("BoxMesh_qedf2")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="NavigationRegion3D/static_objects/door_frame/StaticBody3D" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.169, -1.67739)
mesh = SubResource("BoxMesh_qedf2")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="NavigationRegion3D/static_objects/door_frame/StaticBody3D" index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.66891, 0.000193119)
mesh = SubResource("BoxMesh_m5da8")

[node name="platform _ramp_1" type="StaticBody3D" parent="NavigationRegion3D/static_objects" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0.5, 13)

[node name="CollisionShape3D" type="CollisionShape3D" parent="NavigationRegion3D/static_objects/platform _ramp_1" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.25, 0)
shape = SubResource("BoxShape3D_b30th")

[node name="MeshInstance3D" type="MeshInstance3D" parent="NavigationRegion3D/static_objects/platform _ramp_1" index="1"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, -6.25)
mesh = SubResource("PrismMesh_rfcne")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="NavigationRegion3D/static_objects/platform _ramp_1" index="2"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, -6.25)
shape = SubResource("ConcavePolygonShape3D_b30th")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="NavigationRegion3D/static_objects/platform _ramp_1" index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.25, 0)
mesh = SubResource("BoxMesh_6ao12")

[node name="platform _ramp_2" type="StaticBody3D" parent="NavigationRegion3D/static_objects" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -11, 0.5, 13)

[node name="CollisionShape3D" type="CollisionShape3D" parent="NavigationRegion3D/static_objects/platform _ramp_2" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.25, 0)
shape = SubResource("BoxShape3D_b30th")

[node name="MeshInstance3D" type="MeshInstance3D" parent="NavigationRegion3D/static_objects/platform _ramp_2" index="1"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, -6.25)
mesh = SubResource("PrismMesh_rfcne")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="NavigationRegion3D/static_objects/platform _ramp_2" index="2"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, -6.25)
shape = SubResource("ConcavePolygonShape3D_b30th")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="NavigationRegion3D/static_objects/platform _ramp_2" index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.25, 0)
mesh = SubResource("BoxMesh_6ao12")

[node name="mobile_terrain" type="Node3D" parent="NavigationRegion3D" index="2"]

[node name="down_platform_button" parent="NavigationRegion3D/mobile_terrain" index="0" instance=ExtResource("10_2gjbm")]
unique_name_in_owner = true
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 6, 0.5, 5.625)

[node name="up_platform_button" parent="NavigationRegion3D/mobile_terrain" index="1" instance=ExtResource("10_2gjbm")]
unique_name_in_owner = true
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 6, 10.5, 5.625)

[node name="detector_platform_vertical" parent="NavigationRegion3D/mobile_terrain" index="2" instance=ExtResource("11_bt3mv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0.5, 1)
travel_height = 10.0
travel_speed = 1.0

[node name="small_door_down2" parent="NavigationRegion3D/mobile_terrain" index="3" instance=ExtResource("12_vav15")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0.501, 8)

[node name="triggered_platform_vertical" parent="NavigationRegion3D/mobile_terrain" index="4" instance=ExtResource("13_vp7v6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 0.5, 7)
travel_height = 10.0
travel_speed = 3.0

[node name="detector_platform_horizontal" parent="NavigationRegion3D/mobile_terrain" index="5" instance=ExtResource("14_5fx6l")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 1.75, 2.75, 13)
travel_distance = 10.5
travel_speed = 2.0

[node name="enemy" parent="." index="9" instance=ExtResource("15_eco54")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9, 0.5, 19.0001)

[node name="gun_pickup" parent="." index="10" instance=ExtResource("16_hlk7s")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 1, 0)

[node name="checkpoint1" type="CSGBox3D" parent="." index="11"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9, 0.1, -14)

[node name="checkpoint_1" type="Area3D" parent="checkpoint1" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="checkpoint1/checkpoint_1" index="0"]
shape = SubResource("BoxShape3D_jd5vw")

[node name="checkpoint2" type="CSGBox3D" parent="." index="12"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 0.1, -14)

[node name="checkpoint_2" type="Area3D" parent="checkpoint2" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="checkpoint2/checkpoint_2" index="0"]
shape = SubResource("BoxShape3D_jd5vw")

[connection signal="toggle" from="interactables/button_panel/button" to="interactables/door" method="_on_button_toggle"]
[connection signal="timeout" from="interactables/button_panel/button/pressed_timer" to="interactables/button_panel/button" method="_on_pressed_timer_timeout"]
[connection signal="pressed" from="interactables/button_panel_1" to="interactables/small_door_down" method="_on_button_panel_1_pressed"]
[connection signal="pressed" from="NavigationRegion3D/mobile_terrain/down_platform_button" to="NavigationRegion3D/mobile_terrain/triggered_platform_vertical" method="_on_button_panel_1_pressed"]
[connection signal="pressed" from="NavigationRegion3D/mobile_terrain/up_platform_button" to="NavigationRegion3D/mobile_terrain/triggered_platform_vertical" method="_on_button_panel_1_pressed"]
[connection signal="player_entered" from="gun_pickup" to="." method="_on_gun_pickup_player_entered"]
[connection signal="body_entered" from="checkpoint1/checkpoint_1" to="." method="_on_checkpoint_1_body_entered"]
[connection signal="body_entered" from="checkpoint2/checkpoint_2" to="." method="_on_checkpoint_2_body_entered"]
